trying to fix overflow text

--- a/home_page_style.css
+++ b/home_page_style.css
@@ -16,6 +16,9 @@ body {
     /*overflow: hidden;*/
 }
 
+* {
+    box-sizing: border-box;
+}
 
 /*About box*/
 .box {
